script.js no found

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </footer>
     <canvas class="background"></canvas>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
     <script type="text/javascript" src="https://npmcdn.com/particlesjs@2.2.2/dist/particles.min.js">
     </script>
     <script>
