--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
 
     },5000);
 };
-
+    
     </script>
+    {% if page.custom_js %}
+    {% for js_file in page.custom_js %}
+      <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
+    {% endfor %}
+  {% endif %}
     </body>
 </html>
 
