footer contact form updates

--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
         <div class="arrow-up arrow" id="arrow-up" onclick="toggleFooter()">
             <img alt="arrow" src="https://img.icons8.com/ios/50/ffffff/back--v1.png"/>
         </div>
+        <div>
+            <ul class="contact-info">
+                <li>
+                    <img alt="pin" src="https://img.icons8.com/ios-glyphs/60/ffffff/user-location.png"/>
+                    Miami, Florida.
+                </li>
+                <li>
+                    <img alt="phone-icon" src="https://img.icons8.com/ios-glyphs/60/ffffff/phone-bubble.png"/>
+                    <a>+1 305-2184400</a>
+                </li>
+                <li>
+                    <img alt="email-icon" src="https://img.icons8.com/ios-glyphs/60/ffffff/email.png"/>
+                    <a>lbferrer94@gmail.com
+            </a>
+                </li>
+            </ul>
+        </div>
         <div class="container-menu" id="container-menu">  
             <form class="form" id="form">
                 <div id="formInfo" class="form-info">
@@ -112,11 +129,7 @@
                         <input type="text" id="name" size="">
                     </div>
                     <div>
-                        <label for="lastName">LastName</label>
-                        <input type="text" id="lastName" size="">
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
+                        <label for="email">em@il</label>
                         <input type="text" id="email" size="">
                     </div>
 
@@ -125,7 +138,6 @@
                     <label for="textArea">Message!</label>
                     <textarea id="textArea" name="message"  class="text-area"></textarea>
                 </div>  
-
                 </form>
         </div>     
 
